# poc-sparse-feature-maps

./: CMakeLists.txt  PlanarSparseTensor.cpp  README.md  SparsePlanarTensor.cpp  init.cpp  init.lua  test1.lua  test2.lua
rocks/: sparseplanar-scm-1.rockspec
